Problem with floating nav to the right done with, the at symbol no longer jumps down at a second line below

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -58,7 +58,7 @@
 
 nav {
   float: right;
-  width: 60%;
+  width: 70%;
 }
 @media only screen and (max-width: 766px) {
   nav {
